html spacing fixes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,9 @@
 .chat-clients ul li.me{font-weight:bold;color:#39a64e;}
 .fl{float:left;display:inline-block;}
 
-
+body {
+  font-family: Quantico;
+}
 .audio-red {
   color: #FF0000;
   padding-right: 14px;
